feat: multi-agent optimization wave for api and web runtime stability