@@ -58,7 +58,7 @@ public class ContactController extends BaseApiController {
                 safeSize,
                 sortBy,
                 sortDir,
-                new HashSet<String>(Arrays.asList("customerId", "name", "title", "phone", "email", "owner", "createdAt", "updatedAt")),
+                new HashSet<>(Set.of("customerId", "name", "title", "phone", "email", "owner", "createdAt", "updatedAt")),
                 "updatedAt"
         );
 
@@ -85,11 +85,11 @@ public class ContactController extends BaseApiController {
                 Predicate scopeOwner = cb.equal(root.get("owner"), ownerScope);
                 predicates.add(cb.or(selfOwner, scopeOwner));
             }
-            return cb.and(predicates.toArray(new Predicate[0]));
+            return cb.and(predicates.toArray(Predicate[]::new));
         };
 
         Page<Contact> result = contactRepository.findAll(spec, pageable);
-        Map<String, Object> body = new HashMap<String, Object>();
+        Map<String, Object> body = new HashMap<>();
         body.put("items", result.getContent());
         body.put("total", result.getTotalElements());
         body.put("page", safePage);
